Admin/Index.cshtml

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -58,15 +58,15 @@
 
     @*topfeatures*@
     <div class="text-center mt-5">
-        <div class="text-uppercase font-bold text-3xl my-2">top features of this year</div>
-        <div class="font-light w-75 mx-auto text-md-center text-sm">
+        <div class="text-uppercase font-bold text-5xl my-2">top features of this year</div>
+        <div class="font-light w-75 mx-auto text-sm">
             Crafted in part with recycled glass and ocean-bound plastic,
             each phone comes in a recycled paper box.
             Crafted in part with recycled glass and ocean-bound plastic,
             each phone comes in a recycled paper box.
         </div>
-        <div class="py-2 px-3 mx-auto 
-        bg-black text-white rounded-2xl cursor-pointer my-4 font-semibold" style="width: fit-content">
+        <div class="btn py-2 px-3 mx-auto
+        bg-black text-white rounded-full cursor-pointer mt-3 mb-4 font-semibold text-xs" style="width:fit-content;">
             View More 🡥
         </div>
     </div>
@@ -74,6 +74,7 @@
 
 
     @*product-mini-list*@
+
     <div class="grid grid-cols-4 gap-4 justify-content-between mx-auto mt-lg-5 px-4">
         <div class="flex justify-center text-md">
             <div class="block max-w-sm rounded-lg bg-white shadow-lg">
@@ -99,7 +100,7 @@
                         bulk of the card's content.
                     </p>
                     <div class="flex flex-row justify-between align-items-center font-semibold">
-                        <a class="py-2 px-3 py-2 px-3 rounded-2xl bg-blue-600 hover:bg-blue-800 cursor-pointer text-white">
+                        <a class="py-2 px-3 py-2 px-3 rounded-2xl bg-blue-600 hover:bg-blue-800 cursor-pointer text-white text-xs">
                             Buy
                         </a>
                         <a href="#" class="text-blue-600 font-light">Learn More 🡥</a>
@@ -131,7 +132,7 @@
                         bulk of the card's content.
                     </p>
                     <div class="flex flex-row justify-between align-items-center font-semibold">
-                        <a class="py-2 px-3 py-2 px-3 rounded-2xl bg-blue-600 hover:bg-blue-800 cursor-pointer text-white">
+                        <a class="py-2 px-3 py-2 px-3 rounded-2xl bg-blue-600 hover:bg-blue-800 cursor-pointer text-white text-xs">
                             Buy
                         </a>
                         <a href="#" class="text-blue-600 font-light">Learn More 🡥</a>
@@ -163,7 +164,7 @@
                         bulk of the card's content.
                     </p>
                     <div class="flex flex-row justify-between align-items-center font-semibold">
-                        <a class="py-2 px-3 py-2 px-3 rounded-2xl bg-blue-600 hover:bg-blue-800 cursor-pointer text-white">
+                        <a class="py-2 px-3 py-2 px-3 rounded-2xl bg-blue-600 hover:bg-blue-800 cursor-pointer text-white text-xs">
                             Buy
                         </a>
                         <a href="#" class="text-blue-600 font-light">Learn More 🡥</a>
@@ -195,7 +196,7 @@
                         bulk of the card's content.
                     </p>
                     <div class="flex flex-row justify-between align-items-center font-semibold">
-                        <a class="py-2 px-3 py-2 px-3 rounded-2xl bg-blue-600 hover:bg-blue-800 cursor-pointer text-white">
+                        <a class="py-2 px-3 py-2 px-3 rounded-2xl bg-blue-600 hover:bg-blue-800 cursor-pointer text-white text-xs">
                             Buy
                         </a>
                         <a href="#" class="text-blue-600 font-light">Learn More 🡥</a>
@@ -210,8 +211,9 @@
         <img src="~/wwwroot/Images/Others/Group 51.png" />
         <img src="~/wwwroot/Images/Others/Group 52.png" />
     </div>
-    <div class="w-75 my-4 mx-auto">
-        <img src="~/wwwroot/Images/Others/Frame 32.png" class="object-cover" />
+
+    <div class="mx-auto w-75">
+        <img src="~/wwwroot/Images/Others/Frame 32.png" class="object-cover object-center" />
     </div>
 
 </main>
