--- a/Views/Home/ProductList.cshtml
+++ b/Views/Home/ProductList.cshtml
@@ -278,7 +278,7 @@
                                 bulk of the card's content.
                             </p>
                             <div class="flex flex-row justify-between align-items-center font-semibold">
-                                <a class="py-2 px-3 py-2 px-3 rounded-2xl bg-blue-600 hover:bg-blue-800 cursor-pointer text-white">
+                                <a class="py-2 px-3 py-2 px-3 rounded-2xl bg-blue-600 hover:bg-blue-800 cursor-pointer text-white text-xs">
                                     Buy
                                 </a>
                                 <a href="#" class="text-blue-600 font-light">Learn More 🡥</a>
@@ -310,7 +310,7 @@
                                 bulk of the card's content.
                             </p>
                             <div class="flex flex-row justify-between align-items-center font-semibold">
-                                <a class="py-2 px-3 py-2 px-3 rounded-2xl bg-blue-600 hover:bg-blue-800 cursor-pointer text-white">
+                                <a class="py-2 px-3 py-2 px-3 rounded-2xl bg-blue-600 hover:bg-blue-800 cursor-pointer text-white text-xs">
                                     Buy
                                 </a>
                                 <a href="#" class="text-blue-600 font-light">Learn More 🡥</a>
@@ -342,7 +342,7 @@
                                 bulk of the card's content.
                             </p>
                             <div class="flex flex-row justify-between align-items-center font-semibold">
-                                <a class="py-2 px-3 py-2 px-3 rounded-2xl bg-blue-600 hover:bg-blue-800 cursor-pointer text-white">
+                                <a class="py-2 px-3 py-2 px-3 rounded-2xl bg-blue-600 hover:bg-blue-800 cursor-pointer text-white text-xs">
                                     Buy
                                 </a>
                                 <a href="#" class="text-blue-600 font-light">Learn More 🡥</a>
@@ -374,7 +374,7 @@
                                 bulk of the card's content.
                             </p>
                             <div class="flex flex-row justify-between align-items-center font-semibold">
-                                <a class="py-2 px-3 py-2 px-3 rounded-2xl bg-blue-600 hover:bg-blue-800 cursor-pointer text-white">
+                                <a class="py-2 px-3 py-2 px-3 rounded-2xl bg-blue-600 hover:bg-blue-800 cursor-pointer text-white text-xs">
                                     Buy
                                 </a>
                                 <a href="#" class="text-blue-600 font-light">Learn More 🡥</a>
@@ -406,7 +406,7 @@
                                 bulk of the card's content.
                             </p>
                             <div class="flex flex-row justify-between align-items-center font-semibold">
-                                <a class="py-2 px-3 py-2 px-3 rounded-2xl bg-blue-600 hover:bg-blue-800 cursor-pointer text-white">
+                                <a class="py-2 px-3 py-2 px-3 rounded-2xl bg-blue-600 hover:bg-blue-800 cursor-pointer text-white text-xs">
                                     Buy
                                 </a>
                                 <a href="#" class="text-blue-600 font-light">Learn More 🡥</a>
@@ -438,7 +438,7 @@
                                 bulk of the card's content.
                             </p>
                             <div class="flex flex-row justify-between align-items-center font-semibold">
-                                <a class="py-2 px-3 py-2 px-3 rounded-2xl bg-blue-600 hover:bg-blue-800 cursor-pointer text-white">
+                                <a class="py-2 px-3 py-2 px-3 rounded-2xl bg-blue-600 hover:bg-blue-800 cursor-pointer text-white text-xs">
                                     Buy
                                 </a>
                                 <a href="#" class="text-blue-600 font-light">Learn More 🡥</a>
