--- a/Views/Home/Signup.cshtml
+++ b/Views/Home/Signup.cshtml
@@ -17,14 +17,16 @@
                         <label for="password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your password</label>
                         <input type="password" name="password" id="password" placeholder="••••••••" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 " required>
                     </div>
-                <div class="flex items-start">
-                    <div class="flex items-center h-5">
-                        <input id="remember" aria-describedby="remember" name="remember" type="checkbox" class="w-4 h-4 border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-blue-300" required>
+                    <div class="flex items-start">
+                        <div class="flex items-center">
+                            <input id="isadmin" aria-describedby="isadmin" name="isadmin" type="checkbox" class="w-4 h-4 border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-blue-300" type="checkbox"
+                                   value="isadmin" />
+                            <label class="inline-block pl-[0.15rem] hover:cursor-pointer ml-3 text-sm"
+                                   for="isadmin">
+                                Continue as an admin
+                            </label>
+                        </div>
                     </div>
-                    <div class="ml-3 text-sm">
-                        <label for="continueasadmin" class="font-medium">Continue as an admin</label>
-                    </div>
-                </div>
                     <button class="bg-blue-600 hover:bg-blue-800 text-white text-lg font-semibold w-full py-3 rounded-lg">
                         Sign up
                     </button>
