--- a/Views/Home/Cart.cshtml
+++ b/Views/Home/Cart.cshtml
@@ -16,13 +16,13 @@
                     <th>Product</th>
                     <th>Price</th>
                     <th>Quantity</th>
-                    <th></th>
+                    <th>Remove</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td class="flex mt-2 text-start">
-                        <img src="~/Images/Products/find-n2-flip-black.png" 
+                        <img src="~/wwwroot/Images/Products/find-n2-flip-black.png" 
                         class="h-40"/>
                         <div class="pl-4">
                             <div class="font-bold">Oppo Find N2 Flip</div>
@@ -38,17 +38,17 @@
                     <td>
                         <div class="flex">
                                 <a href="#" class="text-center text-black p-2 bg-gray-100 hover:bg-gray-200 rounded-md">
-                                    <i class="fa-solid fa-minus"></i>
+                                    <i class="fa-solid fa-minus text-xs"></i>
                                 </a>
                                 <div class="py-2 px-4 text-center">1</div>
                                 <a href="#" class="text-center text-black p-2 bg-gray-100 hover:bg-gray-200 rounded-md">
-                                    <i class="fa-solid fa-plus"></i>
+                                    <i class="fa-solid fa-plus text-xs"></i>
                                 </a>
                        </div>
                     </td>
                     <td>
                             <a href="#" class="bg-red-100 text-center p-2 hover:bg-red-200 rounded-lg">
-                                <i class="fa-solid fa-xmark text-red-600" ></i>
+                                <i class="fa-solid fa-xmark text-red-600 text-sm" ></i>
                             </a>
                     </td>
                 </tr>
@@ -58,15 +58,15 @@
         <div class="col-span-1 pl-4 gap-y-3">
             <div class="gap-y-2">
                 <div class="font-bold mb-2">Apply Coupon</div>
-                <div class="text-gray-500 font-light">Using A Promo Code?</div>
+                <div class="text-gray-400 font-light">Using A Promo Code?</div>
                 <div class="flex justify-center mt-3">
                     <div class="relative mb-3 w-full" data-te-input-wrapper-init>
                         <input type="text"
-                               class="font-light peer block min-h-[auto] w-full rounded-lg border outline-none bg-transparent py-[0.32rem] px-3 leading-[1.6] transition-all duration-200 ease-linear focus:placeholder:opacity-100 data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-neutral-200 dark:placeholder:text-neutral-200 [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0"
+                               class="font-light peer block min-h-[auto] w-full rounded-lg border-b outline-none bg-transparent py-[0.32rem] px-3 leading-[1.6] transition-all duration-200 ease-linear focus:placeholder:opacity-100 data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-neutral-200 dark:placeholder:text-neutral-200 [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0"
                                id="exampleFormControlInputText"
-                               placeholder="Example label" />
+                               placeholder="Enter your promo code" />
                         <label for="exampleFormControlInputText"
-                               class="pointer-events-none absolute top-0 left-3 mb-0 max-w-[90%] origin-[0_0] truncate pt-[0.37rem] leading-[1.6] text-neutral-500 transition-all duration-200 ease-out peer-focus:-translate-y-[0.9rem] peer-focus:scale-[0.8] peer-focus:text-primary peer-data-[te-input-state-active]:-translate-y-[0.9rem] peer-data-[te-input-state-active]:scale-[0.8] motion-reduce:transition-none dark:text-neutral-200 dark:peer-focus:text-neutral-200">
+                               class="pointer-events-none text-md absolute top-0 left-3 mb-0 max-w-[90%] origin-[0_0] truncate pt-[0.37rem] leading-[1.6] text-neutral-500 transition-all duration-200 ease-out peer-focus:-translate-y-[0.9rem] peer-focus:scale-[0.8] peer-focus:text-primary peer-data-[te-input-state-active]:-translate-y-[0.9rem] peer-data-[te-input-state-active]:scale-[0.8] motion-reduce:transition-none dark:text-neutral-200 dark:peer-focus:text-neutral-200">
                             Promo Code
                         </label>
                     </div>
@@ -92,7 +92,7 @@
                     <p>Subtotal</p>
                     <p>$0.00</p>
                 </div>
-                <button class="btn btn-primary hover:bg-blue-800 w-full rounded-md text-center text-xs font-semibold py-2">Checkout</button>
+                <button class="btn btn-primary hover:bg-blue-800 w-full rounded-md text-center text-md font-semibold py-2">Checkout</button>
             </div>
         </div>
     </div>
