--- a/Views/Home/Checkout.cshtml
+++ b/Views/Home/Checkout.cshtml
@@ -1,22 +1,21 @@
 ﻿<main>
     <div class="p-2 grid grid-cols-4">
 
-        <div class="col-span-2 p-5 text-xs font-semibold">
-            <div class="mb-4">
-                <img src="~/Images/Products/find-n2-flip-black.png" class="object-cover" />
-                <div class="my-2 font-bold pb-2 my-2 border-b">Detail</div>
-                <div class="d-flex">Oppo Find N2 Flip</div>
-                <div class="d-flex justify-content-between my-2">
-                    <p>Color</p>
-                    <p>Black</p>
-                </div>
-                <div class="d-flex justify-content-between mb-3">
-                    <p>Memory</p>
-                    <p>512GB</p>
+        <div class="col-span-2 p-5 text-xs font-semibold border rounded-lg shadow-md">
+            <div class="mb-4 pb-4 border-b">
+                <div class="mb-3 font-bold pb-2 my-2 border-b text-xl">Detail</div><br />
+                <div class=" grid grid-cols-4">
+                    <img src="~/wwwroot/Images/Products/find-n2-flip-black.png" class="object-cover" />
+                    <div class="ml-2 col-span-2">
+                        <div class="text-md font-semibold">Oppo Find N2 Flip</div>
+                        <div class="mb-2">Black</div>
+                        <div class="mb-2">512 GB</div>
+                        <div class="my-3">$0.00</div>
+                    </div>
                 </div>
             </div>
             <div class="my-3">
-                <div class="mb-2 font-bold pb-2 my-2 border-b">Summary</div>
+                <div class="mb-3 font-bold pb-2 my-2 border-b text-xl">Summary</div>
                 <div class="d-flex justify-content-between my-2">
                     <p>Total</p>
                     <p>$0.00</p>
