--- a/Views/Home/Checkout.cshtml
+++ b/Views/Home/Checkout.cshtml
@@ -1,16 +1,22 @@
 ﻿<main>
-    <div class="p-2 grid grid-cols-4">
+    <div class="p-3 grid grid-cols-4">
 
-        <div class="col-span-2 p-5 text-xs font-semibold border rounded-lg shadow-md">
+        <div class="col-span-2 p-5 mr-2 text-xs font-semibold border rounded-lg shadow-md">
             <div class="mb-4 pb-4 border-b">
                 <div class="mb-3 font-bold pb-2 my-2 border-b text-xl">Detail</div><br />
                 <div class=" grid grid-cols-4">
-                    <img src="~/wwwroot/Images/Products/find-n2-flip-black.png" class="object-cover" />
+                    <div class="col-span-1">
+                        <img src="~/wwwroot/Images/Products/find-n2-flip-black.png" class="object-cover w-full" />
+                    </div>
                     <div class="ml-2 col-span-2">
                         <div class="text-md font-semibold">Oppo Find N2 Flip</div>
                         <div class="mb-2">Black</div>
                         <div class="mb-2">512 GB</div>
+                        <div class="mb-2">1</div>
                         <div class="my-3">$0.00</div>
+                    </div>
+                    <div class="col-span-1">
+                        <i class="fa-solid fa-xmark text-red-600 text-sm"></i>
                     </div>
                 </div>
             </div>
