--- a/Views/Home/Cart.cshtml
+++ b/Views/Home/Cart.cshtml
@@ -22,7 +22,7 @@
             <tbody>
                 <tr>
                     <td class="flex mt-2 text-start">
-                        <img src="~/wwwroot/Images/Products/find-n2-flip-black.png" 
+                        <img src="~/wwwroot/Images/Products/" 
                         class="h-40"/>
                         <div class="pl-4">
                             <div class="font-bold">Oppo Find N2 Flip</div>
