--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -9,26 +9,24 @@
             <!-- Item 1 -->
             <div class="hidden duration-700 ease-in-out" data-carousel-item>
                 <img src="~/wwwroot/Images/Slides/apple.png" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
+                <div class="absolute top-75 start-50 p-4 ">
+                    how to define a mobile app
+                </div>
             </div>
             <!-- Item 2 -->
             <div class="hidden duration-700 ease-in-out" data-carousel-item>
                 <img src="~/wwwroot/Images/Slides/samsung.png" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
+                <div class="absolute top-75 start-50 p-4 bg-transparent">
+                    how to define a shopping app
+                </div>
             </div>
             <!-- Item 3 -->
             <div class="hidden duration-700 ease-in-out" data-carousel-item>
-                <img src="~/wwwroot/Images/Slides/huawei.png" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
+                <img src="~/wwwroot/Images/Slides/oppo.png" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
             </div>
             <!-- Item 4 -->
             <div class="hidden duration-700 ease-in-out" data-carousel-item>
-                <img src="~/wwwroot/Images/Slides/xiaomi.png" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
-            </div>
-            <!-- Item 5 -->
-            <div class="hidden duration-700 ease-in-out" data-carousel-item>
                 <img src="~/wwwroot/Images/Slides/google.png" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
-            </div>
-            <!-- Item 5 -->
-            <div class="hidden duration-700 ease-in-out" data-carousel-item>
-                <img src="~/wwwroot/Images/Slides/oppo.png" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
             </div>
         </div>
         <!-- Slider indicators -->
@@ -37,8 +35,6 @@
             <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 2" data-carousel-slide-to="1"></button>
             <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 3" data-carousel-slide-to="2"></button>
             <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 4" data-carousel-slide-to="3"></button>
-            <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 5" data-carousel-slide-to="4"></button>
-            <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 6" data-carousel-slide-to="5"></button>
         </div>
         <!-- Slider controls -->
         <button type="button" class="absolute top-0 left-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none" data-carousel-prev>
@@ -207,12 +203,12 @@
     </div>
 
     @*samsunng-iphone*@
-    <div class="grid grid-cols-2 my-4">
-        <img src="~/wwwroot/Images/Others/Group 51.png" />
-        <img src="~/wwwroot/Images/Others/Group 52.png" />
+    <div class="grid grid-cols-2 my-5">
+        <img src="~/wwwroot/Images/Others/Group 51.png" class="@Url.Action("Search", "Home", new {id = 1})"/>
+        <img src="~/wwwroot/Images/Others/Group 52.png" class="@Url.Action("Search", "Home", new {id = 1})"/>
     </div>
 
-    <div class="mx-auto w-75">
+    <div class="mx-auto w-50 mt-6">
         <img src="~/wwwroot/Images/Others/Frame 32.png" class="object-cover object-center" />
     </div>
 
