--- a/Views/Home/Cart.cshtml
+++ b/Views/Home/Cart.cshtml
@@ -10,59 +10,57 @@
     </div>
     <div class="grid grid-cols-4 p-4 mt-4 rounded-md border-1 shadow-sm">
         <div class="col-span-3 pr-8 border-r">
-            <table class="w-full table-auto gap-y-2">
-            <thead>
-                <tr>
-                    <th>Product</th>
-                    <th>Price</th>
-                    <th>Quantity</th>
-                    <th>Remove</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td class="flex mt-2 text-start">
-                        <img src="~/wwwroot/Images/Products/" 
-                        class="h-40"/>
-                        <div class="pl-4">
-                            <div class="font-bold">Oppo Find N2 Flip</div>
-                            <div class="font-light">
-                                <div>Color: Black</div>
-                                <div>Memory: 256GB</div>
-                            </div>
-                        </div>
-                    </td>
-                    <td>
-                        $39.23
-                    </td>
-                    <td>
-                        <div class="flex">
-                                <a href="#" class="text-center text-black p-2 bg-gray-100 hover:bg-gray-200 rounded-md">
-                                    <i class="fa-solid fa-minus text-xs"></i>
-                                </a>
-                                <div class="py-2 px-4 text-center">1</div>
-                                <a href="#" class="text-center text-black p-2 bg-gray-100 hover:bg-gray-200 rounded-md">
-                                    <i class="fa-solid fa-plus text-xs"></i>
-                                </a>
-                       </div>
-                    </td>
-                    <td>
-                            <a href="#" class="bg-red-100 text-center p-2 hover:bg-red-200 rounded-lg">
-                                <i class="fa-solid fa-xmark text-red-600 text-sm" ></i>
-                            </a>
-                    </td>
-                </tr>
-            </tbody>
-            </table>
+            @*header*@
+            <div class="grid grid-cols-4 mb-4 pb-3 border-b font-medium">
+                <div>Product</div>
+                <div class="pl-6">Price</div>
+                <div>Quantity</div>
+                <div></div>
+            </div>
+            @*body*@
+            <div class="grid grid-cols-4 my-3 py-4 pr-4 rounded-md shadow-md">
+                <div class="col-span-1 flex">
+                    <img src="~/wwwroot/Images/Products/1.png"
+                         class="h-20" />
+                    <div class="grid-rows-4">
+                        <div class="font-medium">iPhone 14</div>
+                        <div class="font-light text-xs">Iphone</div>
+                        <div class="font-light text-xs">Gold</div>
+                        <a href="#" class="text-blue-600 font-semibold text-xs mt-4">Learn More 🡥</a>
+                    </div>
+                </div>
+                <div class="col-span-1 pl-6 pt-4">
+                    $39.23
+                </div>
+                <div class="col-span-1 pt-4">
+                    <div class="flex">
+                        <a href="#" class="text-center text-black py-1 px-2.5 bg-gray-100 hover:bg-gray-200 rounded-md">
+                            <i class="fa-solid fa-minus text-xs"></i>
+                        </a>
+                        <div class="py-1 px-4 text-center">1</div>
+                        <a href="#" class="text-center text-black py-1 px-2.5 bg-gray-100 hover:bg-gray-200 rounded-md">
+                            <i class="fa-solid fa-plus text-xs"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-span-1 pt-4">
+                    <div class="flex justify-content-end">
+                        <a href="#" class="bg-red-100 text-center py-1 px-2.5 hover:bg-red-200 rounded-md">
+                            <i class="fa-solid fa-xmark text-red-600 text-xs"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
+
         <div class="col-span-1 pl-4 gap-y-3">
             <div class="gap-y-2">
-                <div class="font-bold mb-2">Apply Coupon</div>
-                <div class="text-gray-400 font-light">Using A Promo Code?</div>
+                <div class="font-medium mb-2">Apply Coupon</div>
+                <div class="text-gray-400 font-light text-xs">Using A Promo Code?</div>
                 <div class="flex justify-center mt-3">
                     <div class="relative mb-3 w-full" data-te-input-wrapper-init>
                         <input type="text"
-                               class="font-light peer block min-h-[auto] w-full rounded-lg border-b outline-none bg-transparent py-[0.32rem] px-3 leading-[1.6] transition-all duration-200 ease-linear focus:placeholder:opacity-100 data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-neutral-200 dark:placeholder:text-neutral-200 [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0"
+                               class="font-light peer block min-h-[auto] w-full pb-2 border-b outline-none bg-transparent py-[0.32rem] px-3 leading-[1.6] transition-all duration-200 ease-linear focus:placeholder:opacity-100 data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-neutral-200 dark:placeholder:text-neutral-200 [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0"
                                id="exampleFormControlInputText"
                                placeholder="Enter your promo code" />
                         <label for="exampleFormControlInputText"
@@ -73,26 +71,26 @@
                 </div>
             </div>
             <div class="gap-y-3">
-                <div class="mb-2 font-bold pb-2 my-2 border-b">Order Summary</div>
-                    <div class="d-flex justify-content-between my-2">
-                        <p>Total</p>
-                        <p>$0.00</p>
-                    </div>
+                <div class="mb-2 font-medium pb-2 my-2 border-b">Order Summary</div>
+                <div class="d-flex justify-content-between my-2">
+                    <p>Total</p>
+                    <p>$0.00</p>
+                </div>
 
-                    <div class="d-flex justify-content-between mb-2">
-                        <p>Shipping</p>
-                        <p>$0.00</p>
-                    </div>
+                <div class="d-flex justify-content-between mb-2">
+                    <p>Shipping</p>
+                    <p>$0.00</p>
+                </div>
 
-                    <div class="d-flex justify-content-between pb-2 mb-4 border-b">
-                        <p>Discount</p>
-                        <p>$0.00</p>
-                    </div>
+                <div class="d-flex justify-content-between pb-2 mb-4 border-b">
+                    <p>Discount</p>
+                    <p>$0.00</p>
+                </div>
                 <div class="d-flex justify-content-between my-4">
                     <p>Subtotal</p>
                     <p>$0.00</p>
                 </div>
-                <button class="btn btn-primary hover:bg-blue-800 w-full rounded-md text-center text-md font-semibold py-2">Checkout</button>
+                <a href="@Url.Action("Checkout", "Home")" class="btn btn-primary hover:bg-blue-800 w-full rounded-md text-center text-md font-medium py-2">Checkout</a>
             </div>
         </div>
     </div>
