--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -204,8 +204,8 @@
 
     @*samsunng-iphone*@
     <div class="grid grid-cols-2 my-5">
-        <img src="~/wwwroot/Images/Others/Group 51.png" class="@Url.Action("Search", "Home", new {id = 1})"/>
-        <img src="~/wwwroot/Images/Others/Group 52.png" class="@Url.Action("Search", "Home", new {id = 1})"/>
+        <img src="~/wwwroot/Images/Others/Group 51.png" href="@Url.Action("Search", "Home", new {id = 1})"/>
+        <img src="~/wwwroot/Images/Others/Group 52.png" href="@Url.Action("Search", "Home", new {id = 1})"/>
     </div>
 
     <div class="mx-auto w-50 mt-6">
